--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require_self
  */
 
+
 .pagination {
   justify-content: center;
 }
@@ -22,4 +23,14 @@
   padding: 7px 20px;
   margin-right: 20px;
   background-color: #ffc1cc;
+}
+
+#item_introduction {
+  height: 150px;
+}
+
+#item_genre {
+  margin-left: 1.5rem;
+  margin-bottom: 1rem;
+  width: 75%;
 }
