--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,41 +1,40 @@
 <div class="container">
-  <div class="row py-4">
-    <div class="col-2 bg-light text-center">
+  <div class="row py-4 pr-3">
+    <div class="col-2 offset-1 bg-light text-center">
       <h3>商品一覧</h3>
     </div>
-    <div class="col-10 text-right">
+    <div class="offset-8 text-right">
       <%= link_to '+', new_admin_item_path, class: "btn btn-outline-dark rounded-circle ml-auto shadow" %>
     </div>
   </div>
   <div class="row">
-    <table class='table table-hover table-inverse'>
-      <thead class="bg-light">
-        <tr>
+    <div class="col-11 mx-auto">
+      <table class='table table-hover table-inverse border-bottom'>
+        <tr class="bg-light">
           <th>商品ID</th>
           <th>商品名</th>
           <th>税抜価格</th>
           <th>ジャンル</th>
           <th>ステータス</th>
         </tr>
-      </thead>
-      <tbody>
+
         <% @items.each do |item| %>
         <tr>
           <td><%= item.id %></td>
-          <td><%= link_to item.name, admin_item_path(item.id),style: "color: black;" %></td>
+          <td><%= link_to item.name, admin_item_path(item.id), style: "color: black; border-bottom: solid 1px" %></td>
           <td><%= number_with_delimiter(item.price) %></td>
           <td><%= item.genre.name %></td>
           <% if item.is_active? %>
-            <td class="text-success font-weight-bold">販売中</td>
+            <td><b class="text-success">販売中</b></td>
           <% else %>
-            <td class="text-danger font-weight-bold">販売停止中</td>
+            <td><b class="text-secondary">販売停止中</b></td>
           <% end %>
           </tr>
         <% end %>
-      </tbody>
-    </table>
-    
-    <!-- 1ページ当たりの表示数が10個のペネトレーション設定 -->
-    <%= paginate @items %>
+      </table>
+    </div>
   </div>
+
+  <!-- 1ページ当たりの表示数が10個のペネトレーション設定 -->
+  <%= paginate @items %>
 </div>
