--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,33 +1,33 @@
 <div class="container">
-  <div class="row">
-    <div class="col">
-      <h2 class="my-3">商品詳細</h2>
+  <div class="row py-4 pr-3">
+    <div class="col-2 offset-1 bg-light text-center">
+      <h3>商品詳細</h3>
     </div>
   </div>
-  <div class="row">
-    <div class="col">
-      <%= image_tag @item.get_item_image(350, 250) %>
+  <div class="row mt-3">
+    <div class="col-4 ml-5">
+      <%= image_tag @item.get_item_image(320, 230) %>
     </div>
-    <div class="col">
+    <div class="col-6 ml-3">
       <table>
         <tr>
-          <td>商品名</td>
+          <td class="col-3 align-top">商品名</td>
           <td><%= @item.name %></td>
         </tr>
         <tr>
-          <td>商品説明</td>
+          <td class="col-3align-top">商品説明</td>
           <td><%= @item.introduction %></td>
         </tr>
         <tr>
-          <td>ジャンル</td>
+          <td class="col-3align-top">ジャンル</td>
           <td><%= @item.genre.name %></td>
         </tr>
         <tr>
-          <td>税込価格<br />(税抜価格)</td>
+          <td class="col-3align-top">税込価格<br />(税抜価格)</td>
           <td><%= number_with_delimiter(@item.with_tax_price) %>（<%= number_with_delimiter(@item.price) %>）円</td>
         </tr>
         <tr>
-          <td>販売ステータス</td>
+          <td class="col-3align-top">販売ステータス</td>
           <% if @item.is_active? %>
             <td class="text-success"><b>販売中</b></td>
           <% else %>
@@ -36,7 +36,9 @@
         </tr>
       </table>
 
-      <%= link_to '編集する', edit_admin_item_path(@item.id), class: "btn btn-sm btn-success" %>
+      <div class="mx-auto col-9">
+        <%= link_to '編集する', edit_admin_item_path(@item.id), class: "btn btn-success col-5 py-3 my-4", style: "font-weight: bold; font-size: 18px;" %>
+      </div>
     </div>
   </div>
 </div>
