--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col">
       <h3 class="col-3 my-5 bg-light">会員情報編集</h3>
+      <%= render 'layouts/error', object: @customer %>
 
       <div class="col-sm-14 col-md-12 col-lg-10">
         <%= form_with model: @customer, url: customers_information_path, method: :patch do |f| %>
