--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,4 +1,5 @@
 <h1>ジャンル編集</h1>
+<%= render 'layouts/error', object: @genre %>
 
 <%= form_with model: @genre,url: admin_genre_path(@genre), method: :patch do |f| %>
   <%= f.label :name, "ジャンル名" %>
