--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,71 +1,87 @@
-<h3>注文履歴詳細</h3>
+<div class="container">
+  <div class="row py-4 pr-3">
+    <div class="col-3 offset-1 bg-light text-center">
+      <h3>注文履歴詳細</h3>
+    </div>
+  </div>
 
-<%= form_with model: @order, url: admin_order_path, method: :patch do |f| %>
-<table>
-  <tr>
-    <td>購入者</td>
-    <td><%= @order.customer.last_name %><%= @order.customer.first_name %></td>
-  </tr>
-  <tr>
-    <td>注文日</td>
-    <td><%= l @order.created_at %></td>
-  </tr>
-  <tr>
-    <td>配送先</td>
-    <td><%= @order.customer.address %></td>
-  </tr>
-  <tr>
-    <td>支払方法</td>
-    <td><%= @order.payment_method_i18n %></td>
-  </tr>
-  <tr>
-    <td>注文ステータス</td>
-    <td>
-      <%= f.select :status, Order.statuses.keys.map {|key| [I18n.t("enums.order.status.#{key}"), key]} %>
-      <%= f.submit "更新", class: "btn btn-sm btn-success" %>
-    </td>
-  </tr>
-</table>
-<% end %>
+  <div class="row">
+    <div class="col">
+      <%= form_with model: @order, url: admin_order_path, method: :patch do |f| %>
+        <table>
+          <tr>
+            <th style="font-size: 1.2rem;">購入者</th>
+            <td><u><%= @order.customer.last_name%><%= @order.customer.first_name %></u></td>
+          </tr>
+          <tr>
+            <th style="font-size: 1.2rem;">注文日</th>
+            <td><%= l @order.created_at %></td>
+          </tr>
+          <tr>
+            <th style="font-size: 1.2rem;">配送先</th>
+            <td><%= @order.customer.address %></td>
+          </tr>
+          <tr>
+            <th style="font-size: 1.2rem;">支払方法</th>
+            <td><%= @order.payment_method_i18n %></td>
+          </tr>
+          <tr>
+            <th style="font-size: 1.2rem;">注文ステータス</th>
+            <td>
+              <%= f.select :status, Order.statuses.keys.map {|key| [I18n.t("enums.order.status.#{key}"), key]} %>
+              <%= f.submit "更新", class: "btn btn-sm btn-success" %>
+            </td>
+          </tr>
+        </table>
+        <% end %>
+      </div>
+    </div>
 
-<table>
-  <tr>
-    <td>商品名</td>
-    <td>単価（税込）</td>
-    <td>数量</td>
-    <td>小計</td>
-    <td>製作ステータス</td>
-  </tr>
-  <% @order_details.each do |order_detail| %>
-  <% @total_price = 0 %>
-  <% @total_price += order_detail.item.with_tax_price %>
+    <div class="row">
+      <div class="col-7">
+        <table class="table">
+          <tr class="bg-light">
+            <th>商品名</th>
+            <th>単価（税込）</th>
+            <th>数量</th>
+            <th>小計</th>
+            <th>製作ステータス</th>
+          </tr>
+          <% @order_details.each do |order_detail| %>
+            <% @total_price = 0 %>
+            <% @total_price += order_detail.item.with_tax_price %>
 
-  <%= form_with model: order_detail, url: admin_order_detail_path(order_detail) ,method: :patch do |f| %>
-  <tr>
-    <td><%= order_detail.item.name %></td>
-    <td><%= order_detail.item.with_tax_price %></td>
-    <td><%= order_detail.amount %></td>
-    <td><%= order_detail.amount * order_detail.item.with_tax_price %></td>
-    <td>
-      <%= f.select :making_status, OrderDetail.making_statuses.keys.map {|key| [I18n.t("enums.order_detail.making_status.#{key}"), key]} %>
-      <%= f.submit "更新", class: "btn btn-sm btn-success" %>
-    </td>
-  </tr>
-  <% end %>
-  <% end %>
-</table>
+            <%= form_with model: order_detail, url: admin_order_detail_path(order_detail) ,method: :patch do |f| %>
+            <tr>
+              <td><%= order_detail.item.name %></td>
+              <td><%= number_with_delimiter(order_detail.item.with_tax_price) %></td>
+              <td><%= order_detail.amount %></td>
+              <td><%= number_with_delimiter(order_detail.amount * order_detail.item.with_tax_price) %></td>
+              <td>
+                <%= f.select :making_status, OrderDetail.making_statuses.keys.map {|key| [I18n.t("enums.order_detail.making_status.#{key}"), key]} %>
+                <%= f.submit "更新", class: "btn btn-sm btn-success" %>
+              </td>
+            </tr>
+            <% end %>
+          <% end %>
+        </table>
+      </div>
 
-<table>
-  <tr>
-    <td>商品合計</td>
-    <td><%= @order.total_payment - @order.shipping_cost %>円</td>
-  </tr>
-  <tr>
-    <td>送料</td>
-    <td><%= @order.shipping_cost %>円</td>
-  </tr>
-  <tr>
-    <td>請求金額合計</td>
-    <td><%= @order.total_payment %>円</td>
-  </tr>
-</table>
+      <div class="col-3">
+        <table>
+          <tr>
+            <th style="font-size: 1.2rem;">商品合計</th>
+            <td align="right"><%= number_with_delimiter(@order.total_payment - @order.shipping_cost) %>円</td>
+          </tr>
+          <tr>
+            <th style="font-size: 1.2rem;">送料</th>
+            <td align="right"><%= number_with_delimiter(@order.shipping_cost) %>円</td>
+          </tr>
+          <tr>
+            <th style="font-size: 1.2rem">請求金額合計</th>
+            <th align="right"><%= number_with_delimiter(@order.total_payment) %>円</th>
+          </tr>
+        </table>
+      </div>
+    </div>
+</div>
