--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -63,7 +63,7 @@
                 <%= f.radio_button :is_active, :true %>
                 <%= f.label :is_active, "有効" %>
 
-                <%= f.radio_button :is_active, :false %>
+                <%= f.radio_button :is_active, :false, class: "ml-4" %>
                 <%= f.label :is_active, "退会" %>
               </td>
               <td></td>
