--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,4 +1,7 @@
-<h3>注文履歴詳細</h3>
+<div class="container my-4">
+  <div class="col-4 bg-light text-center">
+    <h3>注文履歴詳細</h3>
+  </div>
 
 <div><b>注文情報</b></div>
 <table class="table">
@@ -60,3 +63,4 @@
     <td><%= @order.total_payment %></td>
   </tr>
 </table>
+</div>
