fixed admin layout

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,8 +29,16 @@
   height: 150px;
 }
 
-#item_genre {
+#item_genre_id {
   margin-left: 1.5rem;
   margin-bottom: 1rem;
   width: 75%;
+}
+
+#order_status {
+  width: 50%;
+}
+
+#order_detail_making_status {
+  width: 50%;
 }
