--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -7,7 +7,7 @@
 
   <div class="row">
     <div class="col">
-      
+
 　　　　<%= render 'layouts/error', object: @item %>
   <%= form_with model: @item, url: admin_items_path(@item), method: :post do |f| %>
     <div class="row-auto justify-content-center mt-4">
@@ -26,7 +26,7 @@
         </tr>
         <tr>
           <td class="align-top"><%= f.label :ジャンル %></td>
-          <td><%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), include_blank: '-- 選択してください --', class: "form-control" %></td>
+          <td><%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), include_blank: '-- 選択してください --' %></td>
         </tr>
         <tr>
           <td class="align-top"><%= f.label :税抜価格 %></td>
