--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -8,8 +8,8 @@
   <div class="row">
     <div class="col">
       <%= form_with model: @order, url: admin_order_path, method: :patch do |f| %>
-        <table>
-          <tr>
+        <table class="col-6">
+          <tr class="mb-3">
             <th style="font-size: 1.2rem;">購入者</th>
             <td><u><%= @order.customer.last_name%><%= @order.customer.first_name %></u></td>
           </tr>
@@ -19,7 +19,10 @@
           </tr>
           <tr>
             <th style="font-size: 1.2rem;">配送先</th>
-            <td><%= @order.customer.address %></td>
+            <td>
+              〒<%= @order.customer.post_code + ' ' + @order.customer.address %><br />
+              <%= @order.customer.last_name%><%= @order.customer.first_name %>
+            </td>
           </tr>
           <tr>
             <th style="font-size: 1.2rem;">支払方法</th>
@@ -29,7 +32,7 @@
             <th style="font-size: 1.2rem;">注文ステータス</th>
             <td>
               <%= f.select :status, Order.statuses.keys.map {|key| [I18n.t("enums.order.status.#{key}"), key]} %>
-              <%= f.submit "更新", class: "btn btn-sm btn-success" %>
+              <%= f.submit "更新", class: "btn btn-sm btn-success ml-3" %>
             </td>
           </tr>
         </table>
@@ -37,9 +40,9 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-7">
-        <table class="table">
+    <div class="row mt-4">
+      <div class="col-8">
+        <table class="table border-bottom">
           <tr class="bg-light">
             <th>商品名</th>
             <th>単価（税込）</th>
@@ -53,13 +56,13 @@
 
             <%= form_with model: order_detail, url: admin_order_detail_path(order_detail) ,method: :patch do |f| %>
             <tr>
-              <td><%= order_detail.item.name %></td>
+              <td><%= order_detail.item.name.truncate(13) %></td>
               <td><%= number_with_delimiter(order_detail.item.with_tax_price) %></td>
               <td><%= order_detail.amount %></td>
               <td><%= number_with_delimiter(order_detail.amount * order_detail.item.with_tax_price) %></td>
               <td>
                 <%= f.select :making_status, OrderDetail.making_statuses.keys.map {|key| [I18n.t("enums.order_detail.making_status.#{key}"), key]} %>
-                <%= f.submit "更新", class: "btn btn-sm btn-success" %>
+                <%= f.submit "更新", class: "btn btn-sm btn-success ml-3" %>
               </td>
             </tr>
             <% end %>
@@ -67,19 +70,19 @@
         </table>
       </div>
 
-      <div class="col-3">
-        <table>
+      <div class="col-4 d-flex align-items-end justify-content-end">
+        <table class="align-bottom" style="font-size: 1.2rem;">
           <tr>
-            <th style="font-size: 1.2rem;">商品合計</th>
+            <th>商品合計</th>
             <td align="right"><%= number_with_delimiter(@order.total_payment - @order.shipping_cost) %>円</td>
           </tr>
           <tr>
-            <th style="font-size: 1.2rem;">送料</th>
+            <th>送料</th>
             <td align="right"><%= number_with_delimiter(@order.shipping_cost) %>円</td>
           </tr>
           <tr>
-            <th style="font-size: 1.2rem">請求金額合計</th>
-            <th align="right"><%= number_with_delimiter(@order.total_payment) %>円</th>
+            <th>請求金額合計</th>
+            <td align="right"><b>　<%= number_with_delimiter(@order.total_payment) %>円</b></td>
           </tr>
         </table>
       </div>
