--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,3 +34,15 @@
   margin-bottom: 1rem;
   width: 75%;
 }
+
+.flash-message {
+  margin: 3px 10px;
+}
+
+.flash-message.notice {
+  color: #009933;
+}
+
+.flash-message.alert {
+  color: #FF0000;
+}
