--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,14 @@
   <body>
     <%= render partial: 'layouts/header' %>
       <main>
-        <%= yield %>
+        <div class="container">
+          <div class="row">
+            <% flash.each do |message_type, message| %>
+            <div class="col flash-message <%= message_type %>"><%= message %></div>
+          <% end %>
+          </div>
+          <%= yield %>
+        </div>
       </main>
   </body>
 </html>
