--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -59,7 +59,7 @@
         </div>
 
         <div class="col m-5">
-          既に登録済みの方
+          <h3 class="col-3 my-3 bg-light">既に登録済みの方</h3>
         <div class="mx-5">
           <%= link_to "こちら", new_customer_session_path %>　からログインしてください。
         </div>
