--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -7,21 +7,21 @@
     <%= link_to 'カートを空にする', destroy_all_cart_items_path , method: :delete , "data-confirm" => "カート内にある全ての商品が削除されます。\n本当に削除しますか？" , class: "btn btn-sm btn-danger" %>
    </div>
   </div>
-  <table class="table-bordered">
+  <table class="table table-lg table-bordered table-hover">
     <thead>
-      <tr>
-        <th scope="col" style="width: 30%;">商品名　　　　　　　　　　　　　　　　　　　　　　　</th>
-        <th scope="col" style="width: 20%;">単価(税込)　　　</th>
-        <th scope="col" style="width: 20%;">数量　　</th>
-        <th scope="col" style="width: 20%;">小計　　　　</th>
-        <th scope="col" style="width: 20%;">　　　　　</th>
+      <tr class="bg-light">
+        <th>商品名　　　　　　　　　　　　　　　　　　　　　　　　　　　　　</th>
+        <th>単価(税込)　　　　　</th>
+        <th>数量　　　　　　</th>
+        <th>小計　　　　　</th>
+        <th>　　　　　</th>
       </tr>
     </thead>
     <tbody>
         <% @cart_items.each do |cart_item| %>
           <tr>
             <td><%= image_tag cart_item.item.get_item_image(90, 60) %>　<%= cart_item.item.name %></td>
-            <td><%= number_with_delimiter(cart_item.item.with_tax_price) %></td>
+            <td style="vertical-align: middle;"><%= number_with_delimiter(cart_item.item.with_tax_price) %></td>
              <td>
                 <%= form_with model:cart_item, url:cart_item_path(cart_item), method: :patch do |f| %>
                   <%= f.select :amount, *[1..99] %>
@@ -29,7 +29,7 @@
                 <% end %>
               </td>
             <td><%= number_with_delimiter(cart_item.subtotal) %></td>
-            <td><%= link_to '削除する', cart_item_path(cart_item.id), method: :delete, "data-confirm" => "本当に削除しますか？" , class: "btn btn-sm btn-danger" %></td>
+            <td style="vertical-align: middle;"><%= link_to '削除する', cart_item_path(cart_item.id), method: :delete, "data-confirm" => "本当に削除しますか？" , class: "btn btn-sm btn-danger" %></td>
           </tr>
         <% end %>
     </tbody>
@@ -43,7 +43,7 @@
     <div class="col-9">
      <table class="table-bordered"  style="float: right;">
       <tr>
-        <td scope="col" style="width: 25%;">合計金額</td>
+        <td scope="col" class="bg-light" style="width: 25%;">合計金額</td>
         <% total_price = 0 %>
         <% @cart_items.each do |cart_item| %>
           <% total_price += cart_item.subtotal %>
