--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row my-3">
-    <div class="col-4 bg-light text-center">
+    <div class="col-3 bg-light text-center">
       <h3>注文情報確認</h3>
     </div>
   </div>
@@ -8,11 +8,11 @@
     <div class="col-8">
       <%= render 'layouts/error', object: @order %>
       <table class="table-bordered">
-        <tr>
-          <td scope="col" style="width: 30%;">商品名　　　　　　　　　　　　</td>
-          <td scope="col" style="width: 20%;">単価</td>
-          <td scope="col" style="width: 20%;">数量</td>
-          <td scope="col" style="width: 20%;">小計</td>
+        <tr class="bg-light">
+          <td scope="col" style="width: 30%;">商品名　　　　　　　　　　　　　　　　　　　　　　　　　</td>
+          <td scope="col" style="width: 20%;">単価　　</td>
+          <td scope="col" style="width: 20%;">数量　　</td>
+          <td scope="col" style="width: 20%;">小計　　</td>
         </tr>
 
         <% @total_price = 0 %>
@@ -30,36 +30,34 @@
        <% end %>
       </table>
     </div>
-    <div class="col-3 offset-md-1">
-      <table class="table-bordered">
+    <div class="col-3 offset-1" style="display: flex; justify-content: flex-end;">
+      <table class="table table-lg table-bordered">
         <tr>
-          <td>送料　　　　　</td>
+          <td class="bg-light">送料　　　　　</td>
           <td><%= @shipping_cost %>　　　　　</td>
         </tr>
         <tr>
-          <td>商品合計</td>
+          <td class="bg-light">商品合計</td>
           <td><%= number_with_delimiter(@total_price) %></td>
         </tr>
         <tr>
-          <td>請求金額</td>
+          <td class="bg-light">請求金額</td>
           <td><%= number_with_delimiter(@total_price + @shipping_cost) %></td>
         </tr>
       </table>
     </div>
   </div>
-  <table>
-    <tr>
-      <th>支払方法</th>
-      <td><%= @order.payment_method_i18n %></td>
-    </tr>
-    <tr>
-      <th>お届け先</th>
-      <td>
-        <%= @order.address %>
-        <%= @order.name %>
-      </td>
-    </tr>
-  </table>
+  
+  <div class="row py-4">
+    <h4 class="mr-3" style="font-weight: bold;">支払い方法</h4>
+    <p style="font-size: 20px;"><%= @order.payment_method_i18n %></p>
+  </div>
+  <div class="row">
+    <h4 class="mr-3" style="font-weight: bold;">お届け先</h4>
+    <p style="font-size: 20px;">〒<%= @order.address %><br/>
+        <%= @order.name %></p>
+  </div>
+  
   <div class="row justify-content-center">
     <%= form_with model: @order , url: orders_path, method: :post do |f| %>
       <%= f.hidden_field :customer_id, value: current_customer.id %>
