--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,46 +1,48 @@
 <div class="container">
   <div class="row py-4 pr-3">
-    <div class="col-4 offset-1 bg-light text-center">
+    <div class="col-3 offset-1 bg-light text-center">
       <h3 class="my-1">配送先登録/一覧</h3>
     </div>
   </div>
+  <div class="row">
+    <div class="col">
+      <%= form_with model: @address,url: addresses_path, method: :post do |f| %>
+        <table class="table table-borderless col-12">
+          <tr>
+            <td class="col-3">
+              <%= f.label :post_code, "郵便番号(ハイフンなし)" %>
+            </td>
+            <td>
+              <%= f.text_field :post_code, placeholder: '0000000' %>
+            </td>
+          </tr>
+          <tr>
+            <td class="col-3">
+              <%= f.label :address, "住所" %>
+            </td>
+            <td style="width: 45%;">
+              <%= f.text_field :address, placeholder: '東京都渋谷区代々木神園町0-0', class: "w-100" %>
+            </td>
+          </tr>
+          <tr>
+            <td class="col-3">
+              <%= f.label :name, "宛名" %>
+            </td>
+            <td>
+              <%= f.text_field :name, placeholder: '令和道子' %>
+            </td>
+            <td>
+              <%= f.submit '新規登録', class:"btn btn-sm btn-success px-4" %>
+            </td>
+          </tr>
+        </table>
+      <% end %>
+    </div>
+  </div>
 </div>
-      <div class="col-sm-12 col-md-10 col-lg-8">
-        <%= form_with model: @address,url: addresses_path, method: :post do |f| %>
-          <table class="table table-borderless">
-            <tr>
-              <td>
-                <%= f.label :post_code, "郵便番号(ハイフンなし)" %>
-              </td>
-              <td>
-                <%= f.text_field :post_code, placeholder: '0000000', class: "form-control" %>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <%= f.label :address, "住所" %>
-              </td>
-              <td>
-                <%= f.text_field :address, placeholder: '東京都渋谷区代々木神園町0-0', class: "form-control", style: "colspan: 3;" %>
-              </td>
-            </tr>
-                <tr>
-              <td>
-                <%= f.label :name, "宛名" %>
-              </td>
-              <td>
-                <%= f.text_field :name, placeholder: '令和道子', class: "form-control" %>
-              </td>
-              <td>
-                <%= f.submit '新規登録', class:"btn btn-sm btn-success" %>
-              </td>
-            </tr>
-          </div>
-          </table>
-        <% end %>
-
+<div class="container">
     <div class="row mt-5">
-      <div class="col-12">
+      <div class="col-8">
         <table class="table table-bordered">
           <thead>
             <tr class="bg-light">
@@ -58,8 +60,8 @@
                 <td><%= address.name %></td>
                 <% if address.customer_id == current_customer.id %>
                 <td>
-                  <%= link_to '編集する', edit_address_path(address), class:"mx-2 btn btn-sm btn-success" %>
-                  <%= link_to '削除する', address_path(address), method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-sm btn-danger" %>
+                  <%= link_to '編集する', edit_address_path(address), class:"mx-2 px-2 btn btn-sm btn-success" %>
+                  <%= link_to '削除する', address_path(address), method: :delete, "data-confirm" => "本当に削除しますか？", class: "px-2 btn btn-sm btn-danger" %>
                 </td>
                 <% end %>
               </tr>
@@ -67,3 +69,5 @@
           </tbody>
         </table>
       </div>
+    </div>
+  </div>
