--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -15,7 +15,7 @@
           </tr>
           <tr>
             <th style="font-size: 1.2rem;">注文日</th>
-            <td><%= l @order.created_at %></td>
+            <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
           </tr>
           <tr>
             <th style="font-size: 1.2rem;">配送先</th>
