--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -11,16 +11,16 @@
       <td>注文ステータス　　</td>
       <td>注文詳細　　　</td>
     </tr>
-  
+
     <% @orders.each do |order| %>
       <tr>
-        <td><%= l order.created_at %></td>
+        <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
         <td>
           〒<%= order.post_code %></br>
           <%= order.address %></br>
           <%= order.name %>
         </td>
-  
+
         <td>
           <% order.order_details.each do |order_detail| %>
           <ul class="list-unstyled">
@@ -28,7 +28,7 @@
           </ul>
           <% end %>
         </td>
-  
+
         <td><%= number_with_delimiter(order.total_payment) %>円</td>
         <td><%= order.status_i18n %></td>
         <td><%= link_to '表示する', order_path(order), class:"btn btn-primary px-4"  %></td>
