--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -6,7 +6,7 @@
   <table class="table">
     <tr>
       <td>注文日</td>
-      <td><%= l @order.created_at %></td>
+      <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
     </tr>
     <tr>
       <td>配送先</td>
@@ -25,8 +25,8 @@
       <td><%= @order.status_i18n %></td>
     </tr>
   </table>
-  
-  
+
+
   <div><b>注文内容</b></div>
   <table class="table">
     <tr>
@@ -35,7 +35,7 @@
       <td>個数</td>
       <td>小計</td>
     </tr>
-  
+
     <% @order.order_details.each do |order_detail| %>
     <tr>
       <td><%= order_detail.item.name %></td>
@@ -45,8 +45,8 @@
     </tr>
     <% end %>
   </table>
-  
-  
+
+
   <div><b>請求情報</b></div>
   <table class="table">
     <tr>
