--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -2,64 +2,77 @@
   <div class="col-4 bg-light text-center">
     <h3>注文履歴詳細</h3>
   </div>
-  <div><b>注文情報</b></div>
-  <table class="table">
-    <tr>
-      <td>注文日</td>
-      <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
-    </tr>
-    <tr>
-      <td>配送先</td>
-      <td>
-        〒<%= @order.post_code %></br>
-        <%= @order.address %></br>
-        <%= @order.name %>
-      </td>
-    </tr>
-    <tr>
-      <td>支払方法</td>
-      <td><%= @order.payment_method_i18n %></td>
-    </tr>
-    <tr>
-      <td>ステータス</td>
-      <td><%= @order.status_i18n %></td>
-    </tr>
-  </table>
+  <div class="col px-sm-0">
+    <div class="row">
+      <div class="col-6">
+        <div><b>注文情報</b></div>
+        <table class="table table-bordered">
+          <tr>
+            <td class="bg-light">注文日</td>
+            <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
+          </tr>
+          <tr>
+            <td class="bg-light">配送先</td>
+            <td>
+              〒<%= @order.post_code %></br>
+              <%= @order.address %></br>
+              <%= @order.name %>
+            </td>
+          </tr>
+          <tr>
+            <td class="bg-light">支払方法</td>
+            <td><%= @order.payment_method_i18n %></td>
+          </tr>
+          <tr>
+            <td class="bg-light">ステータス</td>
+            <td><%= @order.status_i18n %></td>
+          </tr>
+        </table>
+      </div>
+      <div class="col-3">
+        <div><b>請求情報</b></div>
+        <table class="table table-bordered">
+          <tr>
+            <td class="bg-light">商品合計</td>
+            <td><%= @order.total_payment - @order.shipping_cost %></td>
+          </tr>
+          <tr>
+            <td class="bg-light">配送料</td>
+            <td><%= @order.shipping_cost %></td>
+          </tr>
+          <tr>
+            <td class="bg-light">ご請求額</td>
+            <td><%= @order.total_payment %></td>
+          </tr>
+        </table>
+      </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-9">
+        <div><b>注文内容</b></div>
+        <table class="table table-bordered">
+          <tr>
+            <td class="col-5 bg-light">商品</td>
+            <td class="col-2 bg-light">単価（税込)</td>
+            <td class="col-1 bg-light">個数</td>
+            <td class="col-2 bg-light">小計</td>
+          </tr>
+
+          <% @order.order_details.each do |order_detail| %>
+          <tr>
+            <td class="col-5"><%= order_detail.item.name %></td>
+            <td class="col-2"><%= order_detail.item.with_tax_price %></td>
+            <td class="col-1"><%= order_detail.amount %></td>
+            <td class="col-2"><%= order_detail.amount * order_detail.item.with_tax_price %></td>
+          </tr>
+          <% end %>
+        </table>
+      </div>
+    </div>
+  </div>
 
 
-  <div><b>注文内容</b></div>
-  <table class="table">
-    <tr>
-      <td>商品</td>
-      <td>単価（税込)</td>
-      <td>個数</td>
-      <td>小計</td>
-    </tr>
-
-    <% @order.order_details.each do |order_detail| %>
-    <tr>
-      <td><%= order_detail.item.name %></td>
-      <td><%= order_detail.item.with_tax_price %></td>
-      <td><%= order_detail.amount %></td>
-      <td><%= order_detail.amount * order_detail.item.with_tax_price %></td>
-    </tr>
-    <% end %>
-  </table>
 
 
-  <div><b>請求情報</b></div>
-  <table class="table">
-    <tr>
-      <td>商品合計</td>
-      <td><%= @order.total_payment - @order.shipping_cost %></td>
-    </tr>
-    <tr>
-      <td>配送料</td>
-      <td><%= @order.shipping_cost %></td>
-    </tr>
-    <tr>
-      <td>ご請求額</td>
-      <td><%= @order.total_payment %></td>
-    </tr>
-  </table>
-</div>
