--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,105 +1,119 @@
 <header style="background-color: #7B3C15;">
   <div class="container">
     <div class="row border-bottom">
-      <div class="col d-flex mt-4">
-        <a class="navbar-brand" href="/">
-          <%= image_tag "nagano_cake_logo1.png", size: "350x150" %>
-        </a>
+      <div class="col d-flex mt-3">
+        <%= link_to root_path do %>
+          <%= image_tag "nagano-cake_logo", size: "264x110" %>
+        <% end %>
 
+        <!-- 会員がログインしている時、ログイン中の会員の氏名を表示 -->
+        <% if customer_signed_in? %>
+          <p class="ml-1 mt-4 text-light">ようこそ、<%= current_customer.last_name %>さん！</p>
+        <% end %>
+      </div>
+
+
+        <!-- 管理者がログインした時の表示 -->
         <% if admin_signed_in? %>
-      <!-- 4行目のcolに対する</div> -->
-      </div>
-        <div class="col-6">
-          <!-- admin側のheaderを記述 -->
-          <ul class="nav justify-content-end my-3">
-            <li class="nav-item ml-4">
-            <%= link_to "商品一覧", admin_items_path, class:"btn btn-outline-light" %>
-            </li>
-            <li class="nav-item ml-4">
-              <%= link_to "会員一覧", admin_customers_path, class:"btn btn-outline-light" %>
-            </li>
-            <li class="nav-item ml-4">
-              <%= link_to "注文履歴", admin_root_path, class:"btn btn-outline-light" %>
-            </li>
-            <li class="nav-item ml-4">
-              <%= link_to "ジャンル一覧", admin_genres_path, class:"btn btn-outline-light" %>
-            </li>
-            <li class="nav-item ml-4">
-              <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class:"btn btn-outline-light" %>
-            </li>
-          </ul>
+          <div class="col-7">
+            <div class="row  d-flex justify-content-end mr-1">
+              <ul class="nav my-3">
+                <li class="nav-item ml-4">
+                <%= link_to "商品一覧", admin_items_path, class:"btn btn-outline-light" %>
+                </li>
+                <li class="nav-item ml-4">
+                  <%= link_to "会員一覧", admin_customers_path, class:"btn btn-outline-light" %>
+                </li>
+                <li class="nav-item ml-4">
+                  <%= link_to "注文履歴", admin_root_path, class:"btn btn-outline-light" %>
+                </li>
+                <li class="nav-item ml-4">
+                  <%= link_to "ジャンル一覧", admin_genres_path, class:"btn btn-outline-light" %>
+                </li>
+                <li class="nav-item ml-4">
+                  <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class:"btn btn-outline-light" %>
+                </li>
+              </ul>
+            </div>
+          <!-- 検索欄があるので、colに対する締めの</div>は117行目に記載 -->
+
+        <!-- 会員がログインした時の表示 -->
         <% elsif customer_signed_in? %>
-        <!-- publicログイン状態のheaderを記述 -->
-          <div class="ml-1 mt-5 text-light">ようこそ、<%= current_customer.last_name %>さん!</div>
-      <!-- 4行目のcolに対する</div> -->
-      </div>
-        <div class="col-6">
-          <ul class="nav justify-content-end mt-5 my-4">
-            <li class="nav-item ml-4">
-              <%= link_to "マイページ", my_page_path, class:"btn btn-outline-light" %>
-            </li>
-            <li class="nav-item ml-4">
-              <%= link_to "商品一覧", items_path, class:"btn btn-outline-light" %>
-            </li>
-            <li class="nav-item ml-4">
-              <%= link_to "カート", cart_items_path, class:"btn btn-outline-light" %>
-            </li>
-            <li class="nav-item ml-4">
-              <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class:"btn btn-outline-light" %>
-            </li>
-          </ul>
-        <% else %>
-      <!-- 4行目のcolに対する</div> -->
-      </div>
-          <!-- ログインしていない場合のheaderを記述 -->
           <div class="col-6">
-            <ul class="nav justify-content-end my-3">
-              <li class="nav-item ml-4">
-                <%= link_to "About", about_path, class:"btn btn-outline-light" %>
-              </li>
-              <li class="nav-item ml-4">
-                <%= link_to "商品一覧", items_path, class:"btn btn-outline-light" %>
-              </li>
-              <li class="nav-item ml-4">
-                <%= link_to "新規登録", new_customer_registration_path, class:"btn btn-outline-light" %>
-              </li>
-              <li class="nav-item ml-4">
-                <%= link_to "ログイン", customer_session_path, class:"btn btn-outline-light" %>
-              </li>
-            </ul>
+            <div class="row d-flex justify-content-end mr-1">
+              <ul class="nav my-3">
+                <li class="nav-item ml-4">
+                  <%= link_to "マイページ", my_page_path, class:"btn btn-outline-light" %>
+                </li>
+                <li class="nav-item ml-4">
+                  <%= link_to "商品一覧", items_path, class:"btn btn-outline-light" %>
+                </li>
+                <li class="nav-item ml-4">
+                  <%= link_to "カート", cart_items_path, class:"btn btn-outline-light" %>
+                </li>
+                <li class="nav-item ml-4">
+                  <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class:"btn btn-outline-light" %>
+                </li>
+              </ul>
+            </div>
+          <!-- 検索欄があるので、colに対する締めの</div>は117行目に記載 -->
+
+        <!-- ログインしていない時の表示 -->
+        <% else %>
+          <div class="col-6">
+              <div class="row justify-content-end mr-1">
+                <ul class="nav my-3">
+                  <li class="nav-item ml-4">
+                    <%= link_to "About", about_path, class:"btn btn-outline-light" %>
+                  </li>
+                  <li class="nav-item ml-4">
+                    <%= link_to "商品一覧", items_path, class:"btn btn-outline-light" %>
+                  </li>
+                  <li class="nav-item ml-4">
+                    <%= link_to "新規登録", new_customer_registration_path, class:"btn btn-outline-light" %>
+                  </li>
+                  <li class="nav-item ml-4">
+                    <%= link_to "ログイン", customer_session_path, class:"btn btn-outline-light" %>
+                  </li>
+                </ul>
+              </div>
+            <!-- 検索欄があるので、rowに対する締めの</div>は117行目に記載 -->
           <% end %>
 
-          <div class="search offset-6 mb-3">
-            <% if admin_signed_in? %>
-            <ul class="list-unstyled">
-              <li class="nav-item col-md-4">
-                <div class="search_form">
-                  <%= form_with url: admin_search_search_path, method: :get, class: "d-flex" do |f| %>
-                    <%= f.text_field :word, placeholder: 'Search' %>
-                    <%= f.hidden_field :range, value: "商品" %>
-                    <%= f.hidden_field :search, value: "partial" %>
-                    <%= f.submit "検索", class: "btn btn-outline-light" %>
-                  <% end %>
-                </div>
-              </li>
-            </ul>
-
-            <% else %>
-            <ul class="list-unstyled">
-              <li class="nav-item col-md-4">
-                <div class="search_form">
-                  <%= form_with url: public_search_search_path, method: :get, class: "d-flex" do |f| %>
-                    <%= f.text_field :word, placeholder: 'Search' %>
-                    <%= f.hidden_field :range, value: "商品" %>
-                    <%= f.hidden_field :search, value: "partial" %>
-                    <%= f.submit "検索", class: "btn btn-outline-light" %>
-                  <% end %>
-                </div>
-              </li>
-            </ul>
-
-            <% end %>
+          <!-- 商品の検索をするための検索窓 -->
+          <div class="row d-flex justify-content-end">
+            <div class="search">
+              <% if admin_signed_in? %>
+                <ul class="list-unstyled">
+                  <li class="nav-item col-md-4">
+                    <div class="search_form">
+                      <%= form_with url: admin_search_search_path, method: :get, class: "d-flex" do |f| %>
+                        <%= f.text_field :word, placeholder: 'Search' %>
+                        <%= f.hidden_field :range, value: "商品" %>
+                        <%= f.hidden_field :search, value: "partial" %>
+                        <%= f.submit "検索", class: "btn btn-outline-light" %>
+                      <% end %>
+                    </div>
+                  </li>
+                </ul>
+              <% else %>
+                <ul class="list-unstyled">
+                  <li class="nav-item col-md-4">
+                    <div class="search_form">
+                      <%= form_with url: public_search_search_path, method: :get, class: "d-flex" do |f| %>
+                        <%= f.text_field :word, placeholder: 'Search' %>
+                        <%= f.hidden_field :range, value: "商品" %>
+                        <%= f.hidden_field :search, value: "partial" %>
+                        <%= f.submit "検索", class: "btn btn-outline-light" %>
+                      <% end %>
+                    </div>
+                  </li>
+                </ul>
+              <% end %>
+            </div>
           </div>
+
+        <!--「if *_signed_in?」のcolに対する締めの</div> -->
         </div>
     </div>
   </div>
