--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -56,7 +56,7 @@
   </div>
   <div class="row">
     <h4 class="mr-3" style="font-weight: bold;">お届け先</h4>
-    <p style="font-size: 20px;">〒<%= @order.address %><br/>
+    <p style="font-size: 20px;">〒<%= @order.post_code + ' ' + @order.address %><br/>
         <%= @order.name %></p>
   </div>
 
