--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -2,37 +2,41 @@
   <div class="col-4 bg-light text-center">
     <h3>注文履歴一覧</h3>
   </div>
-  <table class="table-bordered">
-    <tr>
-      <td>注文日　　　　　</td>
-      <td>配送先　　　　　　　　　　　　　　　　　　　　　　</td>
-      <td>注文商品　　　　</td>
-      <td>支払金額　　</td>
-      <td>注文ステータス　　</td>
-      <td>注文詳細　　　</td>
-    </tr>
+  <div class="row">
+    <div class="col">
+      <table class="table-bordered">
+        <tr>
+          <td class="col-1 bg-light">注文日</td>
+          <td class="col-3 bg-light">配送先</td>
+          <td class="col-2 bg-light">注文商品</td>
+          <td class="col-2 bg-light">支払金額</td>
+          <td class="col-2 bg-light">ステータス</td>
+          <td class="col-2 bg-light">注文詳細</td>
+        </tr>
 
-    <% @orders.each do |order| %>
-      <tr>
-        <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
-        <td>
-          〒<%= order.post_code %></br>
-          <%= order.address %></br>
-          <%= order.name %>
-        </td>
+      <% @orders.each do |order| %>
+        <tr>
+          <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
+          <td>
+            〒<%= order.post_code %></br>
+            <%= order.address %></br>
+            <%= order.name %>
+          </td>
 
-        <td>
-          <% order.order_details.each do |order_detail| %>
-          <ul class="list-unstyled">
-            <li><%= order_detail.item.name %></li>
-          </ul>
-          <% end %>
-        </td>
+          <td>
+            <% order.order_details.each do |order_detail| %>
+            <ul class="list-unstyled">
+              <li><%= order_detail.item.name %></li>
+            </ul>
+            <% end %>
+          </td>
 
-        <td><%= number_with_delimiter(order.total_payment) %>円</td>
-        <td><%= order.status_i18n %></td>
-        <td><%= link_to '表示する', order_path(order), class:"btn btn-primary px-4"  %></td>
-      </tr>
-    <% end %>
-  </table>
+          <td><%= number_with_delimiter(order.total_payment) %>円</td>
+          <td><%= order.status_i18n %></td>
+          <td class="justify-content-center"><%= link_to '表示する', order_path(order), class:"btn btn-primary p-2"  %></td>
+        </tr>
+        <% end %>
+      </table>
+    </div>
+  </div>
 </div>
