feature/add-oeder-index

--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="row">
     <div class="col">
-      <table class="table-bordered">
+      <table class="table table-bordered">
         <tr>
           <td class="col-1 bg-light">注文日</td>
           <td class="col-3 bg-light">配送先</td>
